unit_tests/dq_2sm_mma/bug.txt
root@tjzj-inf-sci-k8s-bzz2-0205:/home/users/chenquanlin/workspace/operator/test_operator/unit_tests/dq_2sm_mma# python test_dq_2sm_mma.py > bug.txt 
Traceback (most recent call last):
  File "/home/users/chenquanlin/workspace/operator/test_operator/unit_tests/dq_2sm_mma/test_dq_2sm_mma.py", line 102, in <module>
    raise SystemExit(main())
                     ^^^^^^
  File "/home/users/chenquanlin/workspace/operator/test_operator/unit_tests/dq_2sm_mma/test_dq_2sm_mma.py", line 93, in main
    ok_rand = run_case("random", ds_rand, kv_rand, indices_rand)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/users/chenquanlin/workspace/operator/test_operator/unit_tests/dq_2sm_mma/test_dq_2sm_mma.py", line 21, in run_case
    torch.cuda.synchronize()
  File "/usr/local/lib/python3.12/dist-packages/torch/cuda/__init__.py", line 1040, in synchronize
    return torch._C._cuda_synchronize()
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: CUDA error: an illegal memory access was encountered
CUDA kernel errors might be asynchronously reported at some other API call, so the stacktrace below might be incorrect.
For debugging consider passing CUDA_LAUNCH_BLOCKING=1
Compile with `TORCH_USE_CUDA_DSA` to enable device-side assertions.
